# biocompiler

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pypirc.example  ARTIFACT.md  BENCHMARKS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PUBLISHING.md  README.md  benchmark_cai.py  benchmark_cai_v2.py  benchmark_incremental.py  ci-environment.yml  docker-compose.yml  heavy_benchmark_results.json  pyproject.toml  quickstart.sh  requirements-ci.txt  requirements.txt  run_real_dataset.py  xaa
.github/workflows/: benchmarks.yml  ci.yml  mutation-testing.yml  publish.yml  release.yml
agent-ctx/: 2.7-main.md  task1-profiling.md  task1.10-lean4-proof-ci.md  task2.3-blast-integration.md  task2.4-wetlab-validation.md  task2.5-optimizer-decompose.md  task6-wetlab-validation.md
benchmark_results/: COMPREHENSIVE_E2E_REPORT.md  E2E_BENCHMARK_REPORT.md  FULL_SPECTRUM_E2E_REPORT.md  V10_FINAL_BENCHMARK.md  comprehensive_e2e_results.json  e2e_benchmark_results.json  full_spectrum_e2e_results.json  v10_final_benchmark_results.json
benchmarks/: holistic_benchmark.py
biocompiler/: __init__.py  __main__.py  benchmark.py  certificates.py  cli.py  comprehensive_benchmark.py  mutagenesis.py  optimizer.py  restriction_sites.py  species.py  type_system.py
certificates/: GFP_certificate.json  certificate_egfp.json  certificate_human_insulin.json
data/: hazard_reference_sequences.fasta
demonstrations/: run_all_stunts.py
demonstrations/shared/: diagnostics.py
demonstrations/stunt1_therapeutic_autopsy/: run_stunt1.py
demonstrations/stunt2_adversarial_protein/: run_stunt2.py
demonstrations/stunt3_atlas/: run_stunt3.py
demonstrations/stunt5_covid_vaccine/: run_stunt5.py
demonstrations/stunt6_pcr_animation/: run_stunt6.py
docs/: 00-README.md  01-SRS.md  02-SAD.md  03-SDD.md  04-ICD.md  05-SVVP.md  06-Design-Rationale.md  07-Project-Plan.md  08-Traceability-Matrix.md  09-Critical-Analysis.md  10-Deterministic-Methods.md  11-Refinement-Mapping.md  12-Engine-Accuracy.md  13-Retrospective-Validation.md  14-SLOT-Proof-Implementation-Gap.md  15-Reference.md  16-CSP-Solver.md  17-ViennaRNA-Integration.md  18-MHCflurry-Integration.md  19-Competitive-Landscape.md  20-Case-Studies.md  21-IR-Compiler.md  EXAMPLES.md  Makefile  USER_GUIDE.md  api.rst  biosecurity.rst  case_studies.md  cli.rst  conf.py  index.rst  installation.rst  lean4.rst  optimizer.rst  optimizer_strategy_audit.md  predicates.rst  reference_sets.md  standalone-critical-analysis.md  standalone-deterministic-methods.md
docs/adr/: ADR-0001-pipeline-architecture.md  ADR-0001.md  ADR-0002-protocol-buffers-ir-schemas.md  ADR-0002.md  ADR-0003-ndfst-splicing.md  ADR-0003.md  ADR-0004-constraint-satisfaction-gene-design.md  ADR-0004.md  ADR-0005-three-valued-logic-verdicts.md  ADR-0005.md  ADR-0006-ffi-folding-ptms.md  ADR-0006.md  ADR-0007.md  ADR-0008-greedy-multi-objective-optimizer.md  ADR-0008.md  ADR-0009-type-directed-protein-mutagenesis.md  ADR-0009.md  ADR-0010-graduated-certificates.md  ADR-0010.md  ADR-0011-gt-free-codon-prioritization.md  ADR-0011.md  ADR-0012-cpg-avoidance.md  ADR-0013-mutagenesis-gt-mandatory.md  ADR-0014-predicate-checking-delegation.md  ADR-0015-biosecurity-screening.md  ADR-0016-default-safety-measures.md  ADR-0017-feature-parity-dnachisel.md  ADR-0018-tai.md  ADR-011-gt-free-codon-prioritization.md  ADR-012-cpg-avoidance-phase.md  ADR-012-cpg-avoidance.md  ADR-013-mutagenesis-gt-mandatory.md  README.md
docs/api/: Makefile  api_server.rst  biocompiler.annotation.rst  biocompiler.assembly.rst  biocompiler.biosecurity.rst  biocompiler.export.annotation.rst  biocompiler.export.genbank_roundtrip.rst  biocompiler.export.sbol_export.rst  biocompiler.export.sbol_import.rst  biocompiler.expression.tai.rst  biocompiler.genbank_roundtrip.rst  biocompiler.iupac.rst  biocompiler.lims.rst  biocompiler.local_gc.rst  biocompiler.multigene.rst  biocompiler.objectives.rst  biocompiler.optimization.rst  biocompiler.optimizer.assembly.rst  biocompiler.optimizer.multigene.rst  biocompiler.optimizer.objectives.rst  biocompiler.optimizer.parts.rst  biocompiler.optimizer.rst  biocompiler.parts.rst  cli.rst  (+17 more)
eval/: README.md
lean/: BioCompiler.lean  lake-manifest.json  lakefile.lean
mvp/: biocompiler_mvp.py  csp_optimizer.py  maxentscan.py  run_demo.py
paper/: README.md  icfp_draft.aux  icfp_draft.out  icfp_draft.tex  main.tex  popl2027.tex  popl_sections_1_3.tex  popl_sections_4_6.tex  popl_sections_7_9.tex  references.bib
papers/: .gitignore  README.md
proof/: README.md  lake-manifest.json  lakefile.lean
scripts/: benchmark_aho_corasick.py  benchmark_vs_dnachisel.py  build_blast_databases.py  comprehensive_e2e_benchmark.py  comprehensive_head_to_head.py  e2e_benchmark.py  e2e_benchmark_full.py  mega_benchmark.py  reproduce_published_results.py  run_head_to_head.py  run_organism_aware_benchmark.py  run_real_dataset.py  standalone_verifier.py  validate_cai_against_published.py  validate_maxentscan_against_published.py  validate_mhc_binding.py
src/: biocompiler_data.py  biocompiler_poc.py
tests/: README.md  conftest.py  test_aho_corasick.py  test_aho_corasick_unit.py  test_annotation.py  test_api.py  test_api_auth.py  test_api_input_limits.py  test_api_organism_domain.py  test_api_provenance.py  test_api_security.py  test_api_unicode.py  test_assembly.py  test_automaton_unit.py  test_batch_apis.py  test_benchmark.py  test_benchmark_integration.py  test_benchmark_properties.py  test_benchmark_suite.py  test_biocompiler_data.py  test_biocompiler_poc.py  test_biocompiler_unified.py  test_biopython_compat.py  test_biopython_deep.py  test_biopython_roundtrip.py  test_biosecurity.py  test_biosecurity_comprehensive.py  test_biosecurity_coverage.py  test_biosecurity_fuzzy.py  test_biosecurity_integration.py  test_biosecurity_pipeline.py  test_blast_avoidance.py  test_blast_integration.py  test_blast_screening.py  test_cai_aware_conflict_resolution.py  test_cai_aware_resolver.py  test_cai_benchmarking.py  test_cai_cross_validation.py  test_cai_gt_regression.py  test_cai_gt_regression_v11.py  (+278 more)
(+538 files in other folders)
