[project]
name = "biocompiler"
version = "9.2.0"
description = "A compiler framework for machine-verified gene design with deterministic type checking and certificates"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["bioinformatics", "gene-design", "synthetic-biology", "compiler", "type-system", "unified-engine-api", "lean4-verified", "28-predicates"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
optimizer = ["z3-solver>=4.12.0"]
compare = ["dnachisel>=3.0.0"]
head-to-head = ["dnachisel>=3.0.0", "biopython>=1.80"]
api = ["httpx>=0.24.0"]
parsing = ["beautifulsoup4>=4.12.0"]
biopython = ["biopython>=1.80"]
jupyter = ["ipython>=8.0", "matplotlib>=3.5", "ipywidgets>=8.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "hypothesis>=6.0", "ruff>=0.1.0", "mypy>=1.0", "httpx>=0.24.0", "dnachisel>=3.0.0", "beautifulsoup4>=4.12.0", "biopython>=1.80"]

[project.urls]
Homepage = "https://github.com/pkhairkh/biocompiler"
Repository = "https://github.com/pkhairkh/biocompiler"
Documentation = "https://biocompiler.readthedocs.io"
"Bug Tracker" = "https://github.com/pkhairkh/biocompiler/issues"
Changelog = "https://github.com/pkhairkh/biocompiler/releases"

[project.scripts]
biocompiler = "biocompiler.cli:main"
# biocompiler-verify entry point removed — standalone_verifier module does not exist yet

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biocompiler = ["py.typed", "grammars/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
